--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ Mint: #B3EFB2
 Greyish White: #E8F1F2
 */
 
+* {
+    padding: 0;
+    margin: 0;
+    font-family: "RobotSlab", serif;
+}
+
 h1 {
     text-align: center;
     font-size: 50px;
