--- a/style.css
+++ b/style.css
@@ -10,7 +10,11 @@ Greyish White: #E8F1F2
 * {
     padding: 0;
     margin: 0;
-    font-family: "RobotSlab", serif;
+    font-family: "roboto";
+}
+
+body {
+  text-align: center;
 }
 
 h1 {
@@ -25,42 +29,48 @@ section {
 .header {
   width: 100%;
   min-height: 10vh;
-  background-color: #001A23;
 }
 
-.header-ul {
-  width: 95%;
-  height: 100%;
-  font-size: 3rem;
-  color: #FFFFF0;
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
+.logo {
+  margin-left: 40px;
+  margin-top: 20px;
+  float: left;
 }
 
-.header-li {
-  margin: 0rem 0rem;
-  align-self: center;
+.menu {
+  width:200px;
+  height: 20px;
+  display: block;
+  float: right;
+  margin: 20px 0 0 0;
 }
+
+.menu a {
+  display: block;
+  float: left;
+  padding-right: 20px;
+}
+
 
 .main {
-  background-color: #31493C;
   justify-content: center;
   align-items: center;
 }
 
-.title {
-  color: #E8F1F2;
-  font-size: 3rem;
-  margin-bottom: 1rem;
+  .game_title {
+  width: 100%;
+  height: 20px;
+  display: inline-block;
 }
 
 .footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
-  height: 10vh;
-  background-color: #001A23;
+  height: 200px;
+  margin-top:50px;
+  background-color: #F8F8F8;
+  padding: 20px;
 }
 
 div.flex {
@@ -68,38 +78,61 @@ div.flex {
     margin: 0px;
 }
 
-div.col-left {
+.col-left {
     display: flex;
     flex-direction: column;
-    flex: 20%;
+    width: 958px;
+    height: 544px;
+    background-color: #F8F8F8;
+    border-radius: 10px;
+    margin-right:16px;
+    float:left
 }
 
-div.col-right {
-    display: flex;
+.col-right {
+    display: block;
     flex-direction: column;
-    flex: 80%;
+    width: 388px;
+    height: 544px;
+    background-color: #F8F8F8;
+    border-radius: 10px;
+    text-align:center;
+    float:left
+}
+
+#main_content {
+  text-align: center;
+  margin: 20px auto;
+  display: inline-block;
+}
+
+#main_content h2 {
+  font-size: 32px;
+  font-weight: bold;
+  padding:20px 0;
 }
 
 button {
     background-color: #00C78C;
     border: none;
     text-align: center;
-	font-size: 15px;
+	  font-size: 15px;
     border-radius: 5px;
+    margin-top:16px;
 }
 
 button:hover {
-  background-color: grey;
+  background-color: #423FD9;
 }
 
 .game--container {
     display: grid;
     grid-template-columns: repeat(3, auto);
-    width: px;
     margin: 50px auto;
 }
 .cell {
-    font-family: "Permanent Marker", cursive;
+    !-font-family: "Permanent Marker", cursive;
+    font-weight: 800;
     width: 100px;
     height: 100px;
     box-shadow: 0 0 0 1px #333333;
@@ -107,4 +140,28 @@ button:hover {
     cursor: pointer;
     line-height: 100px;
     font-size: 60px;
+}
+
+#chat {
+    width: 100%;
+    height: 400px;
+    background: #ccc;
+    float:left;
+    display: block;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.ingame_button {
+  width: 250px;
+  height: 50px;
+  background: #5B58EA;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  color: white;
+}
+
+.game--status {
+  margin-top: 10px;
+  color: #5B58EA;
 }
