--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ section {
   align-items: center;
 }
 
-  .game_title {
+.game_title {
   width: 100%;
   height: 20px;
   display: inline-block;
@@ -67,7 +67,7 @@ section {
   position: relative;
   bottom: 0;
   width: 100%;
-  height: 200px;
+  height: 100px;
   margin-top:50px;
   background-color: #F8F8F8;
   padding: 20px;
@@ -81,29 +81,29 @@ div.flex {
 .col-left {
     display: flex;
     flex-direction: column;
-    width: 958px;
-    height: 544px;
+    width: 60%;
+    height: 600px;
     background-color: #F8F8F8;
     border-radius: 10px;
-    margin-right:16px;
-    float:left
+    float: left;
+    text-align: center;
 }
 
 .col-right {
     display: block;
-    flex-direction: column;
-    width: 388px;
-    height: 544px;
+    width:35%;
+    height: 600px;
     background-color: #F8F8F8;
     border-radius: 10px;
-    text-align:center;
-    float:left
+    text-align: center;
+    float: right;
 }
 
 #main_content {
   text-align: center;
   margin: 20px auto;
   display: inline-block;
+  width: 95%;
 }
 
 #main_content h2 {
@@ -144,10 +144,8 @@ button:hover {
 
 #chat {
     width: 100%;
-    height: 400px;
+    height: 65%;
     background: #ccc;
-    float:left;
-    display: block;
     text-align: center;
     padding: 20px 0;
 }
