--- a/website/public/style.css
+++ b/website/public/style.css
@@ -15,6 +15,7 @@ Greyish White: #E8F1F2
 
 body {
   text-align: center;
+  height: 100vh;
 }
 
 h1 {
@@ -57,7 +58,7 @@ section {
   align-items: center;
 }
 
-.game_title {
+  .game_title {
   width: 100%;
   height: 20px;
   display: inline-block;
@@ -67,7 +68,7 @@ section {
   position: relative;
   bottom: 0;
   width: 100%;
-  height: 100px;
+  height: 200px;
   margin-top:50px;
   background-color: #F8F8F8;
   padding: 20px;
@@ -81,29 +82,29 @@ div.flex {
 .col-left {
     display: flex;
     flex-direction: column;
-    width: 60%;
-    height: 600px;
+    width: 958px;
+    height: 544px;
     background-color: #F8F8F8;
     border-radius: 10px;
-    float: left;
-    text-align: center;
+    margin-right:16px;
+    float:left
 }
 
 .col-right {
     display: block;
-    width:35%;
-    height: 600px;
+    flex-direction: column;
+    width: 388px;
+    height: 544px;
     background-color: #F8F8F8;
     border-radius: 10px;
-    text-align: center;
-    float: right;
+    text-align:center;
+    float:left
 }
 
 #main_content {
   text-align: center;
   margin: 20px auto;
   display: inline-block;
-  width: 95%;
 }
 
 #main_content h2 {
@@ -144,8 +145,10 @@ button:hover {
 
 #chat {
     width: 100%;
-    height: 65%;
+    height: 400px;
     background: #ccc;
+    float:left;
+    display: block;
     text-align: center;
     padding: 20px 0;
 }
