--- a/website/public/style.css
+++ b/website/public/style.css
@@ -63,14 +63,78 @@ section {
   display: inline-block;
 }
 
+#main_banner {
+    background: #F8F8F8;
+    width: 100%;
+    height: 300px;
+    text-align: center;
+}
+
+#banner_title {
+    font-weight: 700;
+    font-size: 50px;
+    color: #5B58EA;
+    display: block;
+    padding-top:80px;
+}
+
+#banner_subtitle {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 38px;
+    display: block;
+    padding-top: 32px;
+}
+
+#gamelist {
+    width: 100%;
+    height: 500px;
+    float: left;
+    display: block;
+    text-align: center;
+    justify-content: center;
+}
+
+#gamelist > p {
+    font-weight: 700;
+    font-size: 32px;
+    padding: 32px 0;
+}
+
+#gameBox {
+    display: inline-block;
+    margin: 0 10px;
+}
+#joinTTT {
+    background: #F8F8F8;
+    border-radius: 10px;
+    width: 250px;
+    height: 250px;
+    display: inline-block;
+    margin: 20px;
+    text-align: center;
+}
+
+#joinMancala {
+    background: #F8F8F8;
+    border-radius: 10px;
+    width: 250px;
+    height: 250px;
+    display: inline-block;
+    margin: 20px;
+}
+
+
+
 .footer {
-  position: relative;
-  bottom: 0;
   width: 100%;
   height: 100px;
-  margin-top:50px;
+  margin-top:1 00px;
   background-color: #F8F8F8;
   padding: 20px;
+    display: block;
+    float: left;
 }
 
 div.flex {
