--- a/website/public/style.css
+++ b/website/public/style.css
@@ -250,7 +250,7 @@ button:hover {
 }
 
 /* loading modal popup */
-#loading {
+.loading-off {
     position: fixed;
     top: 0;
     left: 0;
@@ -259,13 +259,17 @@ button:hover {
     background-color: rgba(0, 0, 0, 0.5);
     z-index: -1;
     opacity: 0;
+}
 
-    /* for show-up
-
+.loading-on {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
     opacity: 1;
-
-     */
 }
 
 #loadingModal {
